--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,7 +1,2 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
-
-one:
-  name: MyString
-
-two:
-  name: MyString
+good_user:
+  name: Tyler
