--- a/test/fixtures/user_meta.yml
+++ b/test/fixtures/user_meta.yml
@@ -1,21 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
-one:
+good_facebook:
   user_id: 1
-  provider: MyString
-  uid: MyString
-  username: MyString
-  email: MyString
-  first_name: MyString
-  last_name: MyString
-  avatar: MyString
-  description: MyText
-  location: MyString
-
-two:
-  user_id: 1
-  provider: MyString
-  uid: MyString
+  provider: facebook
+  uid: 1
   username: MyString
   email: MyString
   first_name: MyString
